# 2d-game-engine

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  gameengine
libs/sol/: sol.hpp
src/: Game.cpp  Game.h  Game.hpp  Logger.cpp  Logger.hpp  Main  Main.cpp
src/AssetStore/: AssetStore.cpp  AssetStore.hpp
src/Components/: AnimationComponent.hpp  BoxColliderComponent.hpp  HealthComponent.hpp  KeyboardControlledComponent.hpp  ProjectileComponent.hpp  ProjectileEmitterComponent.hpp  RigidBodyComponent.hpp  SpriteComponent.hpp  TransformComponent.hpp
src/ECS/: ECS.cpp  ECS.hpp
src/EventBus/: Event.hpp  EventBus.hpp
src/Events/: CollisionEvent.hpp  KeyPressedEvent.hpp
src/Game/: Game.cpp  Game.hpp
src/Logger/: Logger.cpp  Logger.hpp
src/Systems/: AnimationSystem.hpp  CameraMovementSystem.hpp  CollisionSystem.hpp  DamageSystem.hpp  KeyboardMovementSystem.hpp  MovementSystem.hpp  ProjectileEmitSystem.hpp  ProjectileLifecycleSystem.hpp  RenderColliderSystem.hpp  RenderSystem.hpp
